updated for heroku

--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
                                     <a class="nav-link active" href="javascript:goHome()">Inicio</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="javascript:goSavedForms()" target="_blank">Formulários</a>
+                                    <a class="nav-link" href="javascript:goSavedForms()">Formulários</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="https://www.occ.com.mx/empleos-en-mexico-y-el-mundo/big%20data" target="_blank">Contratar</a>
